lab1/Test/L1-A-4-77.cmm
struct SQ_ADxX_M_C3 NQ78df9z1Xq32 ( int mIywodPs , 
  struct y3bf1jByh {
}VRSsd6rfSbO [ 187598716 ] , int suahwH [ 1014482679 
  ] [ 1809708210 ] ) {
  struct vmZkHPUz {
  }tNsPIWGaz3mJyNKJE4c = ! ! - lYv >= 67334799.495759569 
    / p * dX4G3FO * C_ - bQk1BfX || ! rojZhKiGULko * Z 
    / PES_w_MY77S * DfujuS52BtzmDQF * BN1hXEkw6d / Vktv0_ 
    - QF5MIWl_wpAZL + eJzBz5P5l < a >= n33bf2MrLgLExw 
    <= eoHq <= uYjLTl2G4X1 && nbLoT && _r_U6w2dPETVVNm4 
    && k5hp_Gq && && lSSJ ;
  int m4lakkJTA6 ;
  struct uNDBY {
    struct yJqxyi9xFLaYH sWkeickVLq4 ;
  }G , CNKimeeh6rqZ12P9 ;
  if ( B4LM_kH9R6x ( - KX_LrScKG672 / hp24S / fuGF2Ds04AytocyD5K6l 
    * XHEYE * n7_8DhIz0Rfo4oGq9F * QcU9qYv7yObG * gAIuK7UiRyqlu 
    * VaqdyTNuekEc != wSGkACLVPiF6 > E <= > NYLwtMhxDK 
    != wMznZExUYU6BvpKW == TPOtlDfAyIOqGbVg2FM < _GeFORCapfk4 
    != puvrgG1Xr5Dn2aAH >= ZIOl >= V8ImPMEr5pUi != I <= 
    cArr5PZmQdNeeWn , kajkJ8LIal21sQ ) * ! nob9rF_4R_fGA 
    * BVkBUTWK_A9bN ( lmz4FEu6lfG0Omal1NE ) * ! QKQNt9asy19Jv 
    == ! n9QvhCBS / dTmF3I - vI_kXiLxkbYjFb7DWu - Qy3S 
    - bz5phFU && H * C6FVKHQlDLpHqsT8QWov / zfsQSyTb08e0_ 
    != uB9mQe7M66gf > ePgfuFqf93 && I49HjU6lg * d5YIYSzmWHQBU17 
    * HtU_pJoWCcx <= gNaQkFgb453zeiFQno >= dCWrSAc71B 
    <= BGkpgMg <= _4sRWqCAMdzgi4JHA3 <= _ == nLbHhFFzIu5CbivxLB 
    && - REiGg4CdJOMZ3 / XlGGauf1H5 / pX59QoKsqz9Y * N_NZTi__L2p21R9Qt 
    - iHwHYx3sNOe != ae15IchDdBubE >= t_ZinTWntdzFqVYqi 
    < hLT_Flo5du == M76X81dA6OcNtnnnwtaA && ! skgZeB4N2014D 
    - gD6rcOIIzWHhPb4sBfLP + b9F25 + F_OCmtoOg >= T < 
    q != X2pPi1T > Y6e5D8THiW8zPXDYwtmC < TfrCFuNVqNd 
    != Oj > Rq69vqqJDovH4XdjdCt >= csGBf < yj2y_ != Duson8ZgREH 
    <= rKZ42N7RvDaeSOY5Oi1 >= qQVoav7sSpAEk3SK3 < lDqCafhL1jCvYfYVG 
    >= hWyb7vNUsxu >= CN3ALvEKI1SKXc1GRPF6 >= gdfv3bo9O 
    && J8Ee8oykc7vuUP ( ) * KXJ263hOK - cl0MlrXwG + wHYlJ_kvpSS5Ht7HiIz 
    + eM24p7lds9Dnl + btt0bebZAKxR_M - A - Fx0 == cd < 
    prsoyo != _aGcSTXkZ > ZN > A5dlRZgmsl )   if ( H0UPgQUpXDg 
    )   if ( l9Tsu3qoyeWY4IEhhpB )   hNCBZs6ejhW == ;



  if ( - ! H4HYKC * h3nSUWp * MKw1Q7fptuYfjS1gmm + 
    UY8HvXxidQA_LIk - OivkMl_EcwgMpMyrJ + zXb9BLvbjNJ_2Yrt 
    - U0JqD0P23JO == MIRqqE >= OPuzCf3WSx3niERMx <= == 
    Mc8EwsW_WHwOEkG < TH2904rA7TxCHcdmcXQp >= v != NNVCUF 
    != kaU >= NMfE6GZ > BXllGdzo >= Jh5tiZogjLPg > hSrOitdjv 
    != UJa54axxK9lqHdtJ < un == ISK3fcROTayABeA > VcN99mCuxfwxyaEE 
    < V9dxDZJRuV || KlOcbtRh || xvmt9 || LWmqIn )   XexRAlwLlU0QPiZ7cr 
    ;
else   if ( FXN )   pf7Y ;


}
